<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="task_titles">"Task titles"</string>
    <string name="dialog_addOnNeeded">"Add-on needed"</string>
    <string name="dialog_thisFeatureIsPartOfTheOrganizerAddOnAndMustBeDownloadedSeparately">"This feature is part of the \"Organizer\" add-on and must be downloaded separately."</string>
    <string name="dialog_thisFeatureIsPartOfTheMindersAddOnAndMustBeDownloadedSeparately">This feature is part of the \"Minders\" add-on and must be downloaded separately.</string>
    <string name="dialog_thisFeatureIsPartOfTheBackupAddOnAndMustBeDownloadedSeparately">This feature is part of the \"Backup\" add-on and must be downloaded separately.</string>
    <string name="button_tellMeMore">"Tell me more!"</string>
    <string name="enableThisFeature">Enable this feature?</string>
    <string name="advancedSettings">Advanced settings</string>
    <string name="defaultEditorTab">Default Editor Tab</string>
    <string-array name="defaultEditorTabEntries">
        <item>Details</item>
        <item>Attachments</item>
    </string-array>
    <string name="defaultTab_NAME">Default tab: ^1</string>
    <string name="app_widget_label_2x2">Task list - small</string>
    <string name="app_widget_label_3x3">Task list - large</string>
    <string name="select_a_theme">Select a theme:</string>
    <string name="light_theme">Light theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="select_a_font_size">Select a font size:</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="jumbo">Jumbo</string>
    <string name="create_widget">Create widget</string>
    <string name="create_task_list_widget">Create task list widget</string>
    <string name="option_edit">Edit</string>
    <string name="option_delete">Delete</string>
    <string name="option_save">Save</string>
    <string name="option_revert">Revert</string>
    <string name="option_discard">Discard</string>
    <string name="option_help">Help</string>
    <string name="option_feedback">Feedback</string>
    <string name="option_archive">Archive</string>
    <string name="option_unarchive">Unarchive</string>
    <string name="toast_pleaseEnterAName">Please enter a name.</string>
    <string name="toast_noTasksDeleted">No tasks deleted</string>
    <string name="toast_deletedNTask">Deleted ^1 task</string>
	<string name="button_ok">OK</string>
	<string name="button_cancel">Cancel</string>
    <string name="button_add">Add</string>
	<string name="button_save">Save</string>
	<string name="button_revert">Revert</string>
	<string name="button_discard">Discard</string>
	<string name="button_yes">Yes</string>
	<string name="button_no">No</string>
    <string name="button_next">Next</string>
    <string name="button_back">Back</string>
    <string name="button_remove">Remove</string>
    <string name="button_set">Set</string>
	<string name="button_skip">Skip</string>
	<string name="button_delete">Delete</string>
	<string name="dialog_confirmDelete">Confirm delete</string>
	<string name="dialog_confirmRemoval">Confirm removal</string>
	<string name="dialog_areYouSure">Are you sure?</string>
	<string name="activity_flingtapDone">FlingTap Done</string>
    <string name="intent_taskAttachment">Task attachment</string>
	<string name="activity_taskList">Task list</string>
	<string name="activity_taskListCOLONX">Task list: ^1</string>
	<string name="intent_contactEQUALSX">Contact = ^1</string>
	<string name="intent_task">Task</string>
	<string name="activity_taskEditor">Task editor</string>
	<string name="activity_filters">Filters</string>
	<string name="activity_completable">Sub-task</string>
    <string name="activity_viewNearminder">View Nearminder</string>
    <string name="option_newTask">New task</string>
    <string name="option_filter">Filter</string>
    <string name="option_tutorials">Tutorials</string>
    <string name="option_featuresIntroduction">Feature introduction</string>
    <string name="option_addOns">Add-ons</string>
    <string name="option_blog">Blog</string>
    <string name="option_discussAndSupport">Discuss &amp; Support</string>
    <string name="option_donate">Donate</string>
    <string name="toast_youAreLeavingFlingTapDone">You are\nleaving FlingTap Done</string>
    <string name="context_editTask">Edit task</string>
    <string name="context_deleteTask">Delete task</string>
    <string name="context_markComplete">Mark complete</string>
    <string name="context_markIncomplete">Mark pending</string>
    <string name="context_archiveTask">Archive task</string>
    <string name="context_unarchiveTask">Unarchive task</string>
    <string name="context_labelTask">Label task</string>
    <string name="context_setAs">Set as</string>
    <string name="chooser_setAs">Set task as ...</string>
    <string name="option_complete">Complete</string>
    <string name="option_incomplete">Pending</string>
    <string name="error">Error</string>
    <string name="toast_completableDeleted">Sub-task deleted</string>
    <string name="context_editCompletable">Edit Sub-task</string>
    <string name="context_deleteCompletable">Delete Sub-task</string>
    <string name="toast_filtersMayNotHaveTheSameName">Filters may not have the same name</string>
    <string name="toast_failedToAddNewLabel">Failed to add new label</string>
    <string name="toast_failedToRemoveLabel">Failed to remove label</string>
    <string name="tasksWithNoLabel">Tasks with no label</string>
    <string name="nearminderDeleted">Nearminder deleted</string>
    <string name="applications">Applications</string>
    <string name="button_noThanks">No thanks</string>
    <string name="button_updateNow">Update now</string>
    <string name="dialog_yourTrialVersionHasExpired_">Your trial version has expired.</string>
    <string name="dialog_pleaseUpdate">Please update</string>
    <string name="toast_communicationError">Communication error</string>
    <string name="toast_canceled">Canceled</string>
    <string name="noFilterElements">"When this filter is selected <font fgcolor="#ffffffff"><b>all tasks will be displayed</b></font>."</string>
    <string name="allNonArchivedTasks">All non-archived tasks.</string>
    <string name="allTasksInTheArchive">All tasks in the archive.</string>
    <string name="dialog_filterNotEditableNow">Filter not editable now</string>
    <string name="dialog_taskListWarnCustomFilter">The current filter is custom built to display only tasks that involve the contact who just called you.\n\nTo return to your previously selected filter choose \"Clear\" or choose \"Continue\" to continue using this filter.</string>
    <string name="button_clear">Clear</string>
    <string name="button_continue">Continue</string>
    <string name="toast_nothingRecognized">Nothing recognized</string>
    <string name="dialog_whatDidYouMeanToSay">What did you mean to say?</string>
    <string name="hint_buyGroceries">Buy Groceries</string>
    <string name="notify_tasksRelatedToThisContact">Tasks related to this contact.</string>
    <string name="notify_contextTasksExist">Context tasks exist</string>
	<string name="filterList">Filter list</string>
	<string name="chooseActiveFilter">Choose active filter</string>
	<string name="activeFilter">Active filter</string>
	<string name="availableFilters">Available filters</string>
    <string name="option_newFilter">New filter</string>
	<string name="dialog_setFilterName">Set filter name</string>
	<string name="append_restored">(Restored)</string>
    <string name="context_deleteFilter">Delete filter</string>
    <string name="context_renameFilter">Rename filter</string>
    <string name="context_editFilter">Edit filter</string>
	<string name="option_addLabel">New label</string>
	<string name="dialog_setLabelName">Set label name</string>
	<string name="dialog_editLabelName">Edit label name</string>
	<string name="context_deleteLabel">Delete label</string>
	<string name="context_renameLabel">Rename label</string>
    <string name="dialog_selectDueDateFilter">Select due date filter</string>
    <string name="dialog_tasksWithoutDueDates">Tasks without due dates?</string>
    <string name="dialog_lowestDisplayedPriority">Lowest Displayed Priority</string>
    <string name="dialog_selectFolder">Select folder</string>
    <string name="unlabeled">Unlabeled</string>
    <string name="dueDateX">Due Date: ^1</string>
    <string-array name="array_dueDateFilter">        
	    <item>Anytime</item>	 
	    <item>Next 30 days</item>
	    <item>Next week</item>	         
	    <item>This week</item>	 
	    <item>Tomorrow</item>	 
	    <item>Today</item> 		 
	    <item>In the past</item>     
	    <item>Off</item>         
    </string-array>
    <string name="priorityX">Priority: ^1</string>
    <string name="tasksWithLowerPriorityWillNotBeDisplayed">Tasks with lower priority will not be displayed</string>
    <string name="folderX">Folder: ^1</string>
    <string-array name="array_repository">
	    <item>Main</item>    
	    <item>Archive</item> 
    </string-array>
    <string name="notifyMeWhenImThisClose">Notify me when I\'m this close</string>
    <string name="archiveSettings">Archive settings</string>
    <string name="enableArchive">Enable archive</string>
    <string name="archiveCompletedOrAbandonedTasks">Archive completed or abandoned tasks?</string>
    <string name="alarmSettings">Alarm settings</string>
    <string name="sound">Sound</string>
    <string name="whichAlarmRingtoneWillBePlayed">Which alarm ringtone will be played?</string>
    <string name="vibrate">Vibrate</string>
    <string name="vibratePhoneWhenAlarmOccurs">Vibrate phone when alarm occurs?</string>
    <string name="flash">Flash</string>
    <string name="flashLEDWhenAlarmOccurs">Flash LED when alarm occurs?</string>
    <string name="nearminderSettings">Nearminder settings</string>
    <string name="whichNotificationSoundWillBePlayed">Which notification sound will be played?</string>
    <string name="vibratePhoneWhenNearminderOccurs">Vibrate phone when Nearminder occurs?</string>
    <string name="flashLEDWhenNearminderOccurs">Flash LED when Nearminder occurs?</string>
    <string name="callmindeSettings">Callminder settings</string>
    <string name="enableCallminders">Enable Callminders</string>
    <string name="notifyMeAboutRelevantTasksWhenImOnThePhone">Notify me about relevant tasks when I\'m on the phone?</string>
    <string name="vibratePhoneWhenCallminderOccurs">Vibrate phone when Callminder occurs?</string>
    <string name="flashLEDWhenCallminderOccurs">Flash LED when Callminder occurs?</string>
    <string name="labelSettings">Label settings</string>
    <string name="enableLabels">Enable labels</string>
    <string name="updateSettings">Update settings</string>
    <string name="checkForUpdateNow">Check for update now!</string>
    <string name="completedTasks">Completed tasks</string>
	<string name="automaticRemoval">Automatic removal</string>
	<string name="howLongShouldArchivedTasksBeKept">How long should archived tasks be kept?</string>
	<string name="archiveHousekeeping">Archive housekeeping</string>
	<string name="clearArchiveNow">Clear archive now!</string>
	<string name="application_preferences_category_backup">Backup settings</string>
	<string name="app_pref_enable_backup_title">Enable Backups</string>
	<string name="app_pref_enable_backup_summary">Should backups be performed?</string>
	<string name="app_pref_status_backup_title__waiting">Status: Waiting</string>
	<string name="app_pref_status_backup_summary__waiting">Status unknown</string>
    <string name="wouldYouLikeToUpdateThisApplicationToTheLatestVersion">Would you like to update this application to the latest version?</string>
    <string name="dontNotifyMeOfThisUpdateAgain">Don\'t notify me about this update again</string>
</resources>