<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
            android:text="@string/notifyMeWhenImThisClose"
            android:textColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingTop="3dip"
            android:paddingBottom="5dip"
            android:paddingLeft="3dip"
            android:paddingRight="5dip" />

    <SeekBar
            android:id="@+id/select_area_distance_value"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:max="185"
            android:progress="3"
            android:secondaryProgress="0"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            />

    <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="3dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right">
        <Button android:id="@+id/select_area_button_back"
                android:text="@string/button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_default_small"
                android:paddingRight="17dip"
                android:paddingLeft="17dip"
                />

        <Button android:id="@+id/select_area_button_cancel"
                android:text="@string/button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_default_small"
                android:paddingRight="17dip"
                android:paddingLeft="17dip"
                />
        <Button android:id="@+id/select_area_button_save"
                android:text="@string/button_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_default_small"
                android:paddingRight="17dip"
                android:paddingLeft="17dip"
                />


    </LinearLayout>

</merge>