<?xml version="1.0" encoding="utf-8"?>
<!-- 

  Copyright 2009 Tom Gibara
  
  Licensed under the Apache License, Version 2.0 (the "License"); 
  you may not use this file except in compliance with the License. 
  You may obtain a copy of the License at 
  
  	  http://www.apache.org/licenses/LICENSE-2.0 
  
  Unless required by applicable law or agreed to in writing, software 
  distributed under the License is distributed on an "AS IS" BASIS, 
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
  See the License for the specific language governing permissions and 
  limitations under the License. 

 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
	>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10px"
		android:gravity="center_vertical"
		>
		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_launcher_tasks"
		/>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/activity_flingtapDone"
			style="@android:style/TextAppearance.Large"
		/>
	</LinearLayout>
	<TextView
		android:layout_height="0px"
		android:layout_width="fill_parent"
		android:layout_margin="10px"
		android:layout_weight="1"
		android:text="@string/wouldYouLikeToUpdateThisApplicationToTheLatestVersion"
		style="@android:style/TextAppearance.Medium"
	/>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		<Button
			android:id="@+id/yes"
			android:layout_width="0px"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@android:string/yes"
		/>
		<Button
			android:id="@+id/no"
			android:layout_width="0px"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@android:string/no"
		/>
	</LinearLayout>	
	<CheckBox
		android:id="@+id/stop"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/dontNotifyMeOfThisUpdateAgain"
	/>
</LinearLayout>